--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,12 @@ a {
 * {
   box-sizing: border-box;
 }
+
+.slick-prev:before,
+.slick-next:before {
+  color: black!important;
+}
+
+.slick-dots {
+  top: 90%;
+}
