--- a/styles/LoginStyles.module.css
+++ b/styles/LoginStyles.module.css
@@ -28,3 +28,16 @@
     right: 0;
     z-index: 5;
 }
+
+.displayNone {
+    display: none;
+}
+
+.displayMiddle {
+    position: fixed;
+    bottom: 0;
+    z-index: 5;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
